--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,150 @@
 /* COMMON */
-body {}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: linear-gradient(-180deg, rgba(0,0,0,0.00) 0%, rgba(0,0,0,0.35) 50%), url('../images/anonymous-server-background.jpg') center no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  font-family: 'Roboto Slab';
+  overflow: hidden;
+}
 .page {}
 
 
 
 
 /* HEADER */
-.page__header {}
-.nav-trigger {}
-
-
+.page__header {
+  position: relative;
+}
+.nav-trigger {
+  background-image: url(../images/ico-menu.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-color: rgba(0, 0, 0, 0.7) ;
+	border: 0;
+  border-radius: 5px;
+	height: 40px;
+	width: 40px;
+	position: absolute;
+	right: 20px;
+  top: 20px;
+  font-size: 0;
+  cursor: pointer;
+}
 
 
 /* MENU */
-.nav {}
-.nav__items {}
-.nav__item {}
-.nav__link {}
-.nav-close {}
+.nav {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+	right: 0;
+	top: 0;
+	background-color: rgba(64, 41, 41, 0.92);
+	transition: transform ease .7s, background ease .7s .5s;
+	transform: translateX(150%);
+	.menu-visible & {
+		transform: translateX(0);
+		width: 100%;
+		background-color: rgba(64, 41, 41, 0.5);
+	}
+}
+.nav__items {
+	background-color: rgba(64, 41, 41, 0.92);
+  list-style: none;
+  font-family: 'Roboto Slab';
+  text-align: center;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  margin: 20px;
+}
 
+.nav__item {
+  text-align: center;
 
+}
+.nav__link {
+  text-decoration: none;
+  color: rgba(64, 41, 41, 0.92);
+}
+
+.nav__link:hover {
+  color: rgb(211, 227, 238);
+}
+.nav-close {
+  background-image: url('../images/ico-close.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.7) ;
+  transition: background-color ease 0.7s;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-radius: 5px;
+  border-style: none;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+}
 
 
 /* MAIN */
-.page__main {}
+.page__main {
+  height: 100vh;
+  overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+}
 .page__wrapper {}
-.page__main-title {}
+.page__main-title {
+  font-family: 'Roboto Slab';
+  font-size: 30px;
+  line-height: 40px;
+  text-transform: uppercase;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  width: 300px;
+
+}
 
 
 
 
 /* FOOTER */
-.page__footer {}
-.page__footer {}
-.page__footer-copy {}
+.page__footer {
+  z-index: 4;
+  height: 30px;
+  position: absolute;
+  left: 30px;
+  right: 30px;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.3);
+
+
+}
+.page__wrapper {}
+.page__footer-copy {
+  font-family: 'Arial';
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.5);
+	text-align: center;
+  align-items: center;
+	padding: 8px 20px;
+
+
+}
