--- a/css/main.css
+++ b/css/main.css
@@ -30,13 +30,18 @@ body {
 	background-color: rgba(0, 0, 0, 0.7) ;
 	border: 0;
   border-radius: 5px;
-	height: 40px;
-	width: 40px;
+	height: 50px;
+	width: 50px;
 	position: absolute;
 	right: 20px;
   top: 20px;
   font-size: 0;
   cursor: pointer;
+}
+
+.nav-trigger:hover {
+  background-size: 33px;
+  background-color: rgba(86, 84, 84, 0.7);
 }
 
 
@@ -81,6 +86,10 @@ body {
 .nav__link:hover {
   color: rgb(164, 194, 214);
 }
+.nav__link:focus {
+  color: rgb(164, 194, 214);
+}
+
 .nav-close {
   background-image: url('../images/ico-close.svg');
   background-position: center;
@@ -92,22 +101,25 @@ body {
   right: 20px;
   border-radius: 5px;
   border-style: none;
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
   cursor: pointer;
   font-size: 0;
 }
+
+.nav-close:hover {
+  background-size: 33px;
+  background-color: rgba(86, 84, 84, 0.7);
+}
+
 
 
 /* MAIN */
 .page__main {
   height: 100vh;
   overflow: hidden;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
 }
-.page__wrapper {}
+
 .page__main-title {
   font-family: 'Roboto Slab';
   font-size: 30px;
@@ -122,32 +134,63 @@ body {
 }
 
 
-
-
 /* FOOTER */
 .page__footer {
-  z-index: 4;
-  height: 30px;
+  height: 35px;
   position: absolute;
-  left: 30px;
-  right: 30px;
+  left: 35px;
+  right: 35px;
   bottom: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.3);
-
-
+  background-color: rgba(255, 255, 255, 0.2);
 }
-.page__wrapper {}
+
 .page__footer-copy {
   font-family: 'Arial';
-  font-size: 15px;
-  color: rgba(255, 255, 255, 0.5);
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.4);
 	text-align: center;
   align-items: center;
-	padding: 8px 20px;
+	padding: 8px 0px;
+}
 
+@media all and (min-width:768px) {
+  .page__main {
+    left: 40%;
+    top: 58%;
+  }
+  .page__main-title {
+    font-size: 60px;
+    line-height: 80px;
+    margin: 0 60px;
+    max-width: 990px;
+  }
+  .nav__link {
+    font-size: 45px;
+    line-height: 70px;
+  }
 
+  .page__footer {
+    left: 50px;
+    right: 50px;
+  }
+}
+
+@media all and (min-width:1440px) {
+  .page__main {
+    left: 50%;
+    top: 60%;
+  }
+  .page__main-title{
+    font-size: 100px;
+    line-height: 120px;
+  }
+  .nav__link {
+    font-size: 60px;
+    line-height: 90px;
+  }
+  .page__footer {
+    left: 180px;
+    right: 180px;
+  }
 }
